# flintRV

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.sbt  cpu.v  decode.v  dual_port_ram.v  dump.vcd  execute.v  fetch_decode.v  g_ucode.v  hazard.v  instr.vh  memory.v  types.v  types.vh  ucode.vh  ucode_gen.py  ucodegen.py  writeback.v
boredsoc/: bootrom.v  boredsoc.v  firmware.s  uart_rx.v  uart_tx.v
cmake/: AddMultiTargetComponent.cmake  AsmBuild.cmake  riscv64-unknown-elf.cmake
drop32soc/: bootrom.v  drop32soc.v  drop32soc_tb.v  firmware.s  uart_rx.v  uart_tx.v
examples/drop32soc/: CMakeLists.txt  firmware.s  uart_rx.v  uart_tx.v
examples/flintRVsoc/: CMakeLists.txt  firmware.s  flintRVsoc.v  flintRVsoc_tb.v
examples/hello_world/: CMakeLists.txt  main.c  syscalls.c
examples/risa_handler/: CMakeLists.txt  risa_handler.c  risa_handler.cc
hdl/: ALU.v  ALU_Control.v  CLA.v  Controller.v  DualPortRam.v  Execute.v  FetchDecode.v  Hazard.v  IALU.v  IALU_Control.v  ImmGen.v  Memory.v  Regfile.v  Writeback.v  alu_control.v  boredcore.v  cla.v  controller.v  cpu.v  dual_port_ram.v  execute.v  fetch_decode.v  full_adder.v  ialu.v  immgen.v  memory.v  rca.v  types.vh  writeback.v
pinacolada/: Makefile  README.md  pinacolada_uart.v  pinacolada_uart_rx.v
pinacolada/tests/: pinacolada_uart_rx_tb.v  pinacolada_uart_tx_tb.v  uart_rx_tb.v  uart_tx_tb.v
rtl/: ALU.v  ALU_Control.v  ControlUnit.v  DualPortRam.v  Execute.v  FetchDecode.v  ImmGen.v  Memory.v  Regfile.v  Writeback.v  boredcore.v  drop32.v  flintRV.v  types.vh
scripts/: IALU.mem.py  adder.mem.py  alu.mem.py  boredcore.ld  byteswap_memfile.py  cla_tb.mem.py  common.py  controller.asm.py  core_gen.py  cpu.asm.py  cpu_arith_test.asm.py  cpu_jump_test.asm.py  cpu_logic_test.asm.py  custom_sections.ld  drop32.ld  drop32soc_gen.py  flintRV.ld  flintRVsoc_gen.py  hazard.mem.py  hello_world.ld  immgen.asm.py  immgen_tb.asm.py  immgen_tb.py  sub_ALU.mem.py  sub_ALU_Control.asm.py  sub_ControlUnit.asm.py  sub_Controller.asm.py  sub_Hazard.mem.py  sub_ImmGen.asm.py  ucode.gen.py  ucode.py  unit_Hazard.mem.py  unit_IALU.mem.py  unit_IALU_Control.asm.py  unit_ImmGen.asm.py  utils.py
sim/: README.md  common.cc  common.hh  drop32.cc  drop32.hh  main.cc  utils.cc  utils.hh
sim/Vdrop32/: README.md  drop32.cc  drop32.h  main.cc  utils.cc
sim/common/: utils.cc  utils.h
sim/flintRV/: README.md  flintRV.cc  flintRV.h  main.cc
sim/risa/: README.md  gdbserver.c  gdbserver.cc  gdbserver.h  handlers.c  handlers.cc  main.c  main.cc  risa.c  risa.cc  risa.h  socket.c  socket.cc  socket.h
sim/src/: boredcore.cc  common.cc  common.hh  drop32.cc  drop32.hh  main.cc
sim/verilator/: README.md  boredcore.cc  boredcore.hh  common.cc  common.hh  drop32.cc  main.cc  utils.hh
soc/: Makefile  README.md  uart_tx.v
soc/common/: bootrom.v
soc/smol/: README.md  firmware.s  g_core.v  smol.v
soc/tests/: uart_rx_tb.v  uart_tx_tb.v
src/: ALU_Control.v  ControlUnit.v  FetchDecode.v  Memory.v
src/main/scala/boredcore/: alu.scala  regfile.scala  types.scala  utils.scala
tests/: Makefile  alu.py  alu_control_tb.v  alu_tb.v  cla_tb.v  controller_tb.v  cpu_tb.v  dual_port_ram_tb.v  hazard_tb.v  immgen.py  immgen_tb.v  main.cc  rca_tb.v  test_algorithms.cc  test_basic.cc  test_functional.cc  test_unit.cc
tests/algorithms/: CMakeLists.txt  binsearch.c  fibonacci.c  mergesort.c
tests/basic/: CMakeLists.txt  arith.s  functions.c  jump_branch.s  load_store.s  logic.s  simple_loop.s
tests/cpu/: boredcore.cc  boredcore.hh  common.cc  common.hh  main.cc  test_algorithms.cc  test_basic.cc  test_functional.cc
tests/cpu/algorithms/: binsearch.c  fibonacci.c  mergesort.c  test_algorithms.cc  test_binaries.h
tests/cpu/basic/: arith.s  jump_branch.s  load_store.s  logic.s  simple_loop.s  test_basic.cc
tests/cpu/functional/: cpu_load_store.s  jump_branch.s  load_store.s  logic.s  simple_loop.s  test_binaries.h  test_functional.cc
tests/cpu/programs/: cpu_load_store.s  cpu_simple_loop.s  test_asm.s
tests/cpu/src/: test_asm.s
tests/soc/: uart_rx.v  uart_tx.v
tests/sub/: ALU.v  ALU_Control.v  ALU_Control_tb.v  ALU_tb.v  ControlUnit.v  ControlUnit_tb.v  Controller.v  DualPortRam.v  Hazard.v  ImmGen.v  ImmGen_tb.v  Regfile.v  Regfile_tb.v  main_tb.v
tests/unit/: ALU_Control_tb.v  ALU_tb.v  ControlUnit_tb.v  DualPortRam_tb.v  ImmGen_tb.v  Regfile_tb.v  main_tb.v
tests/units/: ALU.v  ALU_Control.v  Controller.v  DualPortRam.v  Hazard.v  IALU.v  IALU_Control.v  ImmGen.v  Regfile.v
tests/verilator/: cpu_test.cpp
